1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (unless): New macro.

	* emu.el: Define tl:overlay obsolete aliases for all emacsen.

	* poem-nemacs.el (decode-coding-string): Regard integer as
	coding-system.
	(encode-coding-string): Likewise.
	(decode-coding-region): Likewise.
	(encode-coding-region): Likewise.

	* poe-18.el (set-text-properties): New function.

	* install.el (install-detect-elisp-directory): Fix problem on
	Nemacs.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-ltn1.el (set-buffer-multibyte): Use `defun-maybe' instead
	of `defmacro-maybe'.

	* poem-e20_2.el (set-buffer-multibyte): Use `defun-maybe' instead
	of `defsubst-maybe'.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* EMU-ELS: New implementation.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-mule.el, EMU-ELS: Move code about CCL from
	emu-mule.el to pccl-om.el.

	* pccl.el: New file.

	* pccl.el: - Rename emu-e20.el to pccl-20.el.
	- Move definition of emu-x20.el to pccl-20.el.
	- Move code about CCL from emu-mule.el to pccl-om.el.

	* pccl-om.el: New file (move code about CCL from emu-mule.el).

	* pccl-20.el: New file (renamed from emu-e20.el; move definition
	of emu-x20.el to pccl-20.el; abolish emu-x20.el).

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-x20.el, emu-e20.el: Move function `char-category'
	from emu-e20.el and emu-x20.el to emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-nemacs.el, emu-latin1.el, EMU-ELS: Move definitions
	of emu-nemacs.el and emu-latin1.el to emu.el; abolish
	emu-nemacs.el and emu-latin1.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el: Modify conditions to load sub-modules.

	* emu.el, emu-e20.el: Move alias
	`insert-binary-file-contents-literally' from emu-e20.el to emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem.el, emu.el: Move `string-as-unibyte',
	`string-as-multibyte', `char-int', `int-char' and