@@ -1,3 +1,8 @@
+1998-09-17  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* pccl-om.el (make-ccl-coding-system): Enclose with
+	`eval-and-compile'.
+
 1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* poe.el (unless): New macro.
